tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_bound_identifier_const_expr_fast_path.objc3
module MessageSendNonzeroBoundIdentifierConstExprFastPath;

fn main() -> i32 {
  let base = 3;
  let receiver = base + 4;
  return [receiver ping];
}
