tests/tooling/fixtures/native/recovery/negative/negative_block_comment_lexer_unterminated.objc3
// Expected diagnostic code(s): O3L002.
module NegativeBlockCommentLexerUnterminated;

let value = 3;

/* unterminated block comment
fn main() -> i32 {
  return value;
}
